--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -8,3 +8,24 @@
     width: 55px;
     margin: 0 10px 10px 0;
 }
+.hidden{
+    opacity: 0;
+}
+.selectedCards{
+    display: flex;
+    padding: 20px;
+}
+.selectedCard{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 33%;
+}
+.openedCard{
+    width: 150px;
+}
+.timeline{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+}
