--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -13,6 +13,7 @@
 }
 .selectedCards{
     display: flex;
+    margin-bottom: 100px;
 }
 .selectedCard{
     display: flex;
@@ -35,6 +36,20 @@
     width: 150px;
     height: 340px;
     background-color: var(--accent-color);
-    opacity: 0.2;
+    opacity: 0.3;
     border-radius: 15px;
+}
+.buttonSave{
+    width: 20%;
+    background-color: aqua;
+}
+.buttonRestart{
+    width: 20%;
+}
+.buttonsBox{
+    
+    display: none;
+}
+.display{
+    display: block;
 }
