--- a/src/components/Favorites/FavoritesCards.css
+++ b/src/components/Favorites/FavoritesCards.css
@@ -15,3 +15,9 @@
     font-style: italic;
     font-weight: 300;
 }
+@media screen and (max-width:775px) {
+
+    .savedBox {
+        width: 80%;
+    }
+}
