--- a/src/components/MainIntro.css
+++ b/src/components/MainIntro.css
@@ -24,7 +24,7 @@
         cursor: pointer;
 }
 .main-intro button:hover {
-    background-color: #a66c1a;
+    background-color: var(--accent-hover-background);
 }
 .textIntro{
     width: 60%;
