--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,3 +1,6 @@
+*{
+    font-family: 'Cardo', serif;
+}
 .cards{
     display: flex;
     flex-wrap: wrap;
@@ -59,7 +62,7 @@ img.openedCard{
     background-color: var(--accent-color);
     border: none;
     border-radius: 10px;
-    padding: 15px 35px;
+    padding: 10px 35px;
     font-size: 1em;
     cursor: pointer;
 }
@@ -69,6 +72,7 @@ img.openedCard{
 
 .buttonRestart {
     margin-left: 1em;
+    font-weight: 600;
 }
 
 .buttonRestart:hover, .buttonSave:hover {
@@ -81,7 +85,8 @@ img.openedCard{
     margin-bottom: 1em;
 }
 .display{
-    display: block;
+    display: flex;
+    justify-content: center;
 }
 .displayNone{
     display: none;
